- [#MODX-117] Fixed Resource Data alignment by converting Data page to MODx.FormPanel. - Adjusted some UI appearances for Configuration Settings grid - Added 'staticboolean' xtype

--- a/manager/templates/default/css/modext.css
+++ b/manager/templates/default/css/modext.css
@@ -29,3 +29,6 @@ h3 {
 .not-installed {
     color: red;
 }
+
+.red { color: red !important; }
+.green { color: green !important; }
